@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+          - Fixed bug calling push_layer on mswin32
+
 0.67.1    2016-02-01 00:18:31
           - Improved test coverage
           - Fixed coverage token it's specific to the repository
